<resources>
    <string name="app_name">Rotation</string>
    <string name="running">Rotation: Running</string>
    <string name="sensor_delay">Sensor delay</string>
    <string name="sensor_delay_fastest">fastest</string>
    <string name="sensor_delay_game">faster</string>
    <string name="sensor_delay_normal">normal</string>
    <string name="sensor_delay_ui">slow</string>
    <string name="destination_host">Destination host</string>
    <string name="destination_port">Destination port</string>
    <string name="display_live">Display live</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unable_to_parse_integer">Unable to parse integer</string>
    <string name="display_live_disabled">Live preview disabled</string>
</resources>
